# poetry_example

./: LICENSE  README.md  pyproject.toml
poetry_example/notebooks/: example_book.ipynb
poetry_example/src/: hello_writer.py
